[package]
name = "parsegcache"
version = "0.1.0"
edition = "2021"

[dependencies]
parsegcache-hashtable = { path = "crates/hashtable" }
parsegcache-wheel = { path = "crates/wheel" }

crossbeam = "0.8.2"
memmap2 = "0.5.8"
memoffset = "0.8.0"
oneshot = { version = "0.1.5", features = ["async"] }
sharded-slab = "0.1.4"
stable-vec = "0.4.0"
thiserror = "1.0.37"
arrayvec = "0.7.2"
ouroboros = "0.15.5"

[workspace]
members = [
  ".",
  "crates/hashtable",
  "crates/wheel",
]
