[package]
name = "parsegcache"
version = "0.1.0"
edition = "2021"

[features]
loom = [ "dep:loom", "parsegcache-hashtable/loom" ]

[dependencies]
parsegcache-hashtable = { path = "crates/hashtable" }
parsegcache-wheel = { path = "crates/wheel" }

crossbeam = "0.8.2"
memmap2 = "0.5.8"
memoffset = "0.8.0"
stable-vec = "0.4.0"
thiserror = "1.0.37"
ouroboros = "0.15.5"

loom = { version = "0.5.6", optional = true }

[workspace]
members = [
  ".",
  "crates/hashtable",
  "crates/wheel",
]
