[package]
name = "parsegcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
memmap2 = "0.5.8"
memoffset = "0.8.0"
oneshot = { version = "0.1.5", features = ["async"] }
sharded-slab = "0.1.4"
stable-vec = "0.4.0"
thiserror = "1.0.37"

parsegcache-hashtable = { path = "crates/hashtable" }

[workspace]
members = [
  ".",
  "crates/hashtable",
]
